add check
Signed-off-by: CHEN Roxane <roxane.chen@rte-france.com>